--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "firebase-admin": "^13.4.0",
+    "geoip-lite": "^1.4.10",
     "google-auth-library": "^9.15.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
