--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "country-list": "^2.3.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
